# ccrtp

./: .cvsignore  AUTHORS  CMakeLists.txt  COPYING.addendum  ChangeLog  Makefile.am  NEWS  README  TODO  acconfig.h  ccrtp.kdevprj  ccrtp.lsm.in  ccrtp.proto  ccrtp.spec.cmake  ccrtp.spec.in  configure.ac  configure.in  libccrtp.pc.in  libccrtp.spec.cmake  libccrtp.spec.in  libccrtp1.pc.in  pkginfo.in  reconfig
cmake/Modules/: AutoArgs.cmake
config/: Makefile.am
contributions/cryptolib/: .gitignore  Readme.txt  build.xml
contributions/cryptolib/src/org/bouncycastle/crypto/digests/: Skein.java
contributions/cryptolib/src/org/bouncycastle/crypto/engines/: Threefish1024.java.c  Threefish256.java.c  Threefish512.java.c  ThreefishCipher.java
contributions/cryptolib/src/org/bouncycastle/crypto/macs/: SkeinMac.java
contributions/cryptolib/src/org/bouncycastle/crypto/params/: ParametersForSkein.java
contributions/cryptolib/src/org/bouncycastle/crypto/prng/: FortunaGenerator.java
contributions/cryptolib/test/src/org/bouncycastle/crypto/test/: FortunaTest.java  LongTest.java  SkeinMacTests.java  SkeinTesting.java
demo/: CMakeLists.txt  Makefile.am  README  audio.h  audiorx.cpp  audiotx.cpp  ccrtptest.cpp  ccsrtptest.cpp  rtpduphello.cpp  rtphello.cpp  rtplisten.cpp  rtpsend.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyman  Doxymini  Makefile.am  ccrtp.texi  fdlnotice.texi
extensions/zrtp/demo/: CMakeLists.txt
freebsd/: Makefile.in
m4/: Makefile.am  ost_cxx.m4  ost_debug.m4  ost_endian.m4  ost_getopt.m4  ost_maint.m4  ost_misc.m4  ost_posix.m4  ost_prog.m4  ost_systime.m4
phone/: Makefile.am  config.cpp  phone.conf  phone.cpp  phone.h  rtp.cpp  server.cpp  server.h
src/: CMakeLists.txt  CryptoContext.cpp  CryptoContext.cxx  CryptoContextCtrl.cpp  Makefile.am  control.cpp  data.cpp  duplex.cpp  incqueue.cpp  members.cpp  outqueue.cpp  packet.cpp  pool.cpp  private.h  queue.cpp  rtcppkt.cpp  rtp.h  rtpext.h  rtppkt.cpp  socket.cpp  source.cpp
src/cc++/: Makefile.am
src/cc++/rtp/: Makefile.am  base.h  cqueue.h  ext.h  formats.h  ioqueue.h  iqueue.h  oqueue.h  pool.h  queuebase.h  rtcppkt.h  rtp.h  rtppkt.h  socket.h  sources.h
src/ccrtp/: CMakeLists.txt  CryptoContext.h  CryptoContextCtrl.h  Makefile.am  base.h  channel.h  cqueue.h  ext.h  formats.h  ioqueue.h  iqueue.h  oqueue.h  pool.h  queuebase.h  rtcppkt.h  rtp.h  rtppkt.h  socket.h  sources.h
src/ccrtp/crypto/: AesSrtp.h  CMakeLists.txt  Makefile.am  SkeinMACApi.c  ZrtpDH.h  hmac.h  hmac256.h  macSkein.cpp  macSkein.h  sha256.h  skeinApi.c  skeinApi.h
src/ccrtp/crypto/gcrypt/: AesSrtp.h  InitializeGcrypt.cxx  Makefile.am  ZrtpDH.h  gcryptAesSrtp.cpp  gcryptAesSrtp.cxx  gcryptSrtpSymCrypto.cpp  gcryptZrtpDH.cxx  gcrypthmac.cpp  gcrypthmac.cxx  gcrypthmac256.cxx  gcryptsha256.cxx  hmac.h  hmac256.h  sha256.h
src/ccrtp/crypto/openssl/: AesSrtp.cpp  AesSrtp.cxx  InitializeOpenSSL.cxx  Makefile.am  Makefile.in  SrtpSymCrypto.cpp  ZrtpDH.cxx  hmac.cpp  hmac.cxx  hmac256.cxx  hmac256.h  sha256.cxx
src/ccrtp/zrtp/: Base32.cxx  Makefile.am  Makefile.in  ZIDFile.cxx  ZIDFile.h  ZIDRecord.cxx  ZIDRecord.h  ZRtp.cxx  ZRtp.h  ZrtpCallback.h  ZrtpPacketBase.h  ZrtpPacketClearAck.cxx  ZrtpPacketClearAck.h  ZrtpPacketCommit.cxx  ZrtpPacketCommit.h  ZrtpPacketConf2Ack.cxx  ZrtpPacketConf2Ack.h  ZrtpPacketConfirm.cxx  ZrtpPacketConfirm.h  ZrtpPacketDHPart.cxx  ZrtpPacketDHPart.h  ZrtpPacketError.cxx  ZrtpPacketError.h  ZrtpPacketGoClear.cxx  ZrtpPacketGoClear.h  ZrtpPacketHello.cxx  ZrtpPacketHello.h  ZrtpPacketHelloAck.cxx  ZrtpPacketHelloAck.h  ZrtpQueue.cpp  ZrtpQueue.h  ZrtpStateClass.cxx  ZrtpStateClass.h  ZrtpStates.h  ZrtpTextData.cxx  ZrtpUserCallback.h  zrtpPacket.h
src/crypto/openssl/: AesSrtp.cxx  AesSrtp.h  Makefile.am  ZrtpDH.cxx  ZrtpDH.h  hmac.cxx  hmac.h  hmac256.cxx  hmac256.h  sha256.cxx  sha256.h
src/zrtp/: Base32.cxx  Base32.h  Makefile.am  ZIDFile.cxx  ZIDFile.h  ZIDRecord.cxx  ZIDRecord.h  ZRtp.cxx  ZRtp.h  ZrtpCallback.h  ZrtpPacketBase.h  ZrtpPacketClearAck.cxx  ZrtpPacketClearAck.h  ZrtpPacketCommit.cxx  ZrtpPacketCommit.h  ZrtpPacketConf2Ack.cxx  ZrtpPacketConf2Ack.h  ZrtpPacketConfirm.cxx  ZrtpPacketConfirm.h  ZrtpPacketDHPart.cxx  ZrtpPacketDHPart.h  ZrtpPacketError.cxx  ZrtpPacketError.h  ZrtpPacketGoClear.cxx  ZrtpPacketGoClear.h  ZrtpPacketHello.cxx  ZrtpPacketHello.h  ZrtpPacketHelloAck.cxx  ZrtpPacketHelloAck.h  ZrtpQueue.cpp  ZrtpQueue.h  ZrtpStateClass.cxx  ZrtpStateClass.h  ZrtpStates.h  ZrtpTextData.cxx  ZrtpUserCallback.h  zrtpPacket.h
w32/: Makefile.am
w32/cape/: ccrtp1.dsp  ccrtp1.dsw  ccrtp1.sln  ccrtp1.vcproj  rtphello.dsp  rtphello.vcproj  rtplisten.dsp  rtplisten.vcproj  rtpsend.dsp  rtpsend.vcproj
win32/: Makefile.am  README
win32/mingw32/: Makefile.gcc
win32/msvcpp/: GNUccRTP.dsp  GNUccRTP.dsw  ccRTPdemo.dsw  ccrtp1.dsp  ccrtp1.dsw
win32/msvcpp/demo/: rtphello.dsp  rtplisten.dsp  rtpsend.dsp
