# Copyright (C) 2000-2002 Open Source Telecom Corporation.
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = no-dependencies dist-shar dist-zip
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = reconfig ccrtp.spec ccrtp.spec.in COPYING.addendum \
	ccrtp.list ccrtp.list.in autoconf/*

SUBDIRS = src doc
DIST_SUBDIRS = m4 src phone doc demo w32




