# Copyright (C) 1999-2001 Open Source Telecom Corporation.
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(reconfig)
VERSION="0.7.0"
REQUIRES="1.9.0"
LT_RELEASE="0.9"
LT_VERSION="0:0"
AC_CONFIG_AUX_DIR(config)
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(ccrtp,[$VERSION])
AM_CONFIG_HEADER(src/config.h)
OST_PROG_COMMON
OST_PROG_LIBVER
OST_PROG_LIBRARY(CCXX,[$LT_VERSION])
OST_AUTOMAKE_MODE
OST_MAINTAINER_MODE
OST_CCXX_VERSION([$REQUIRES])
OST_CC_ENDIAN
dnl --with-nana: check for nana, the GNU assertion checking and logging library
AC_MSG_CHECKING([if libnana is installed])
AC_ARG_WITH(nana,[  --with-nana             use GNU nana for asserts and logging [default=no]], 
	if test "$with_nana" = yes; then 
		AC_CHECK_HEADER(nana.h, 
			AC_CHECK_HEADERS(DL.h, 
				AC_CHECK_LIB(nana, main)))
	fi;)
dnl needed to construct the CNAME with getenv(2)
dnl AC_CHECK_HEADERS(cstdlib,[AC_DEFINE(HAVE_CSTDLIB)],
dnl 		[AC_CHECK_HEADERS(stdlib.h,[AC_DEFINE(HAVE_STDLIB_H)],
dnl 				[],dummy)],
dnl 		dummy)
AC_HAVE_HEADERS(cstdlib)
AC_CHECK_HEADERS(stdlib.h)
dnl needed to get the FQN of the local host for CNAME
dnl AC_CHECK_HEADERS(sys/utsname.h,[],[],dummy)
AC_CHECK_HEADERS(sys/utsname.h)
KDOC_DIR="\$(top_srcdir)/doc"
AC_SUBST(LT_RELEASE)
AC_SUBST(KDOC_DIR)
AC_OUTPUT(src/Makefile config/Makefile m4/Makefile doc/Makefile demo/Makefile
phone/Makefile Makefile pkginfo ccrtp.spec freebsd/Makefile 
freebsd/pkg-plist)

if test -d doc/man3 ; then
      ls doc/man3/*.3cc | sed -e 's:^doc/man3/:man/man3/:' >> freebsd/pkg-plist ; fi
if test -d doc/html ; then
      ls doc/html | sed -e 's:^:share/doc/ccrtp/:' >>freebsd/pkg-plist ; fi
