# Copyright (C) 1999-2003 Open Source Telecom Corporation.
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(src/ccrtp/rtp.h)
VERSION="1.0.2"
REQUIRES="1.0.0"
LT_RELEASE="1.0"
LT_VERSION="0:2"
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_SYSTEM
AC_PROG_CC
OST_PROG_CC_POSIX
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(ccrtp,[$VERSION])
AM_CONFIG_HEADER(src/config.h)
OST_PROG_COMMON
OST_PROG_LIBVER
OST_PROG_LIBRARY(CCXX,[$LT_VERSION])
OST_AUTOMAKE_MODE
OST_MAINTAINER_MODE
OST_CCXX2_VERSION([$REQUIRES])
OST_CC_ENDIAN
# Are we using the GNU compiler?
if test $GCC = yes ; then
	WARN_FLAGS="-Wall -ansi -pedantic"
else
	WARN_FLAGS=""
fi
AC_SUBST(WARN_FLAGS)
dnl --with-nana: check for nana, the GNU assertion checking and logging library
AC_ARG_WITH(nana,[  --with-nana             use GNU nana for asserts and logging],[
	AC_CHECK_HEADER(nana.h, [
		AC_CHECK_HEADERS(DL.h, [
			AC_CHECK_LIB(nana, main)
			])
	])
])
KDOC_DIR="\$(top_srcdir)/doc"
AC_SUBST(LT_RELEASE)
AC_SUBST(KDOC_DIR)
AC_OUTPUT(Makefile src/Makefile src/ccrtp/Makefile
config/Makefile m4/Makefile freebsd/Makefile pkginfo freebsd/pkg-plist
doc/Makefile demo/Makefile phone/Makefile win32/Makefile ccrtp.spec)

if test -d doc/man3 ; then
      ls doc/man3/*.3cc | sed -e 's:^doc/man3/:man/man3/:' >> freebsd/pkg-plist ; fi
if test -d doc/html ; then
      ls doc/html | sed -e 's:^:share/doc/ccrtp/:' >>freebsd/pkg-plist ; fi
